[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/settings/settings_window.gd" id="1_script"]
[ext_resource type="StyleBox" path="res://assets/ui/styles/panel_gold_border.tres" id="2_style"]

[node name="SettingsWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0823529, 0.12549, 0.901961)

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TabBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TabGeneral" type="Button" parent="MainContainer/TabBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "常规"

[node name="TabGraphics" type="Button" parent="MainContainer/TabBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
text = "图形"

[node name="TabAudio" type="Button" parent="MainContainer/TabBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
text = "音频"

[node name="TabInput" type="Button" parent="MainContainer/TabBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
toggle_mode = true
text = "输入"

[node name="ContentBorder" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_style")

[node name="Margin" type="MarginContainer" parent="MainContainer/ContentBorder"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ContentArea" type="Control" parent="MainContainer/ContentBorder/Margin"]
unique_name_in_owner = true
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="ResetButton" type="Button" parent="MainContainer/Footer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "重置默认"

[node name="ApplyButton" type="Button" parent="MainContainer/Footer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "应用并返回"
